doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_101\bin\javadoc.exe
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master;H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\Assignments;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master
-d
H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\Assignments\StudentBody.java
<---- end of javadoc command ---->
Loading source file H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\Assignments\StudentBody.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_101
Building tree for all the packages and classes...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\Assignments\StudentBody.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\Assignments\package-frame.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\Assignments\package-summary.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\constant-values.html...
H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\Assignments\Rational.java:110: error: not a statement
       int 
       ^
H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\Assignments\Rational.java:110: error: ';' expected
       int 
          ^
Building index for all the packages and classes...
Building index for all classes...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\allclasses-frame.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\allclasses-noframe.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\index.html...
Generating H:\AP Computer Science A\chapter4-repo-2017-pelenovski-master\chapter4-repo-2017-pelenovski-master\doc\stylesheet.css...
Note: Custom tags that could override future standard tags:  @pre, @post. To avoid potential overrides, use at least one period character (.) in custom tag names.
Note: Custom tags that were not seen:  @pre, @post
2 errors
